<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.cricketscorekeeper.MainActivity">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/dimenS">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout style="@style/CustomColumnStyle">


                <TextView
                    style="@style/CustomTeamTextStyle"
                    android:text="@string/team_A" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/dimenS">

                    <TextView
                        android:id="@+id/team_a_score"
                        style="@style/CustomScoreTextStyle"
                        android:layout_marginRight="@dimen/dimenM"
                        android:text="@string/default_value" />

                    <TextView
                        style="@style/CustomScoreTextStyle"
                        android:text="@string/dash" />

                    <TextView
                        android:id="@+id/team_a_outs"
                        style="@style/CustomScoreTextStyle"
                        android:layout_marginLeft="@dimen/dimenM"
                        android:text="@string/default_value" />
                </LinearLayout>

                <Button
                    style="@style/CustomButtonStyle"
                    android:onClick="addOnePointTeamA"
                    android:text="@string/btn_add_one" />

                <Button
                    style="@style/CustomButtonStyle"
                    android:onClick="addFourPointsTeamA"
                    android:text="@string/btn_add_four" />

                <Button
                    style="@style/CustomButtonStyle"
                    android:onClick="addSixPointsTeamA"
                    android:text="@string/btn_add_six" />

                <Button
                    style="@style/CustomButtonStyle"
                    android:onClick="addOutTeamA"
                    android:text="@string/btn_add_out" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/dimenXS"
                android:layout_height="match_parent"
                android:background="@color/colorAccent" />

            <LinearLayout style="@style/CustomColumnStyle">

                <TextView
                    style="@style/CustomTeamTextStyle"
                    android:text="@string/team_B" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/dimenS">

                    <TextView
                        android:id="@+id/team_b_score"
                        style="@style/CustomScoreTextStyle"
                        android:layout_marginRight="@dimen/dimenM"
                        android:text="@string/default_value" />

                    <TextView
                        style="@style/CustomScoreTextStyle"
                        android:text="@string/dash" />

                    <TextView
                        android:id="@+id/team_b_outs"
                        style="@style/CustomScoreTextStyle"
                        android:layout_marginLeft="@dimen/dimenM"
                        android:text="@string/default_value" />
                </LinearLayout>

                <Button
                    style="@style/CustomButtonStyle"
                    android:onClick="addOnePointTeamB"
                    android:text="@string/btn_add_one" />

                <Button
                    style="@style/CustomButtonStyle"
                    android:onClick="addFourPointsTeamB"
                    android:text="@string/btn_add_four" />

                <Button
                    style="@style/CustomButtonStyle"
                    android:onClick="addSixPointsTeamB"
                    android:text="@string/btn_add_six" />

                <Button
                    style="@style/CustomButtonStyle"
                    android:onClick="addOutTeamB"
                    android:text="@string/btn_add_out" />
            </LinearLayout>

        </LinearLayout>

        <Button
            style="@style/CustomButtonStyle"
            android:layout_below="@+id/layout"
            android:layout_margin="@dimen/dimenXL"
            android:onClick="reset"
            android:text="@string/btn_reset" />

    </RelativeLayout>
</ScrollView>
